# oleg-bot

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  README.md  TROUBLESHOOTING.md  deploy-check.sh  docker-compose.yml  main.py  nginx.conf  pyproject.toml
src/oleg_bot/: __init__.py  config.py  main.py
src/oleg_bot/bot/: __init__.py  commands.py  decision.py  language.py  reactions.py  responder.py  startup.py  store.py  tone.py  webhook.py
tests/: __init__.py
tests/e2e/: __init__.py  conftest.py  test_telegram_integration.py
tests/integration/: __init__.py  test_webhook.py
tests/unit/: __init__.py  test_commands.py  test_decision.py  test_language.py  test_reactions.py  test_responder.py  test_store.py  test_tone.py
